--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,5 +33,7 @@ dependencies {
   implementation 'com.google.android.gms:play-services-auth:15.0.1'
   implementation 'com.google.firebase:firebase-core:16.0.1'
   implementation 'com.android.support:design:27.1.0'
+  implementation 'com.github.bumptech.glide:glide:4.8.0'
+  annotationProcessor 'com.github.bumptech.glide:compiler:4.8.0'
 }
 apply plugin: 'com.google.gms.google-services'
