--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,10 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".Login.LoginActivity"
+        <activity android:name=".OrderHistory.OrderHistory">
+        </activity>
+        <activity
+            android:name=".Login.LoginActivity"
             android:theme="@style/customNoTitleBar">
         </activity>
         <activity android:name=".MainActivity">
