--- a/build.gradle
+++ b/build.gradle
@@ -20,6 +20,8 @@ allprojects {
         google()
         jcenter()
         maven { url 'https://dl.bintray.com/kotlin/kotlin-eap' }
+        maven { url 'https://maven.google.com'}
+        mavenCentral()
     }
 }
 
