--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,7 +2,9 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.goldenboat.waymart">
 
+    <uses-permission android:name="android.permission.BLUETOOTH"/>
     <uses-permission android:name="android.permission.CAMERA"/>
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -10,13 +12,17 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".OrderHistory.OrderHistory">
+        <activity android:name=".Server.MainServer">
+        </activity>
+        <activity android:name=".Server.Server">
         </activity>
         <activity
             android:name=".Login.LoginActivity"
             android:theme="@style/customNoTitleBar">
         </activity>
-        <activity android:name=".QRCodeScan" android:theme="@style/customNoTitleBar"></activity>
+        <activity
+            android:name=".QRCodeScan"
+            android:theme="@style/customNoTitleBar"/>
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
@@ -24,9 +30,10 @@
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
+
         <meta-data
             android:name="com.google.android.gms.vision.DEPENDENCIES"
-            android:value="barcode" />
+            android:value="barcode"/>
     </application>
 
 </manifest>
